@@ -21,7 +21,7 @@ import sys, os, re
 
 # Add any Sphinx extension module names here, as strings. They can be extensions
 # coming with Sphinx (named 'sphinx.addons.*') or your custom ones.
-extensions = ['sphinx.ext.autodoc', 'sphinx.ext.doctest']
+extensions = ['sphinx.ext.autodoc', 'sphinx.ext.doctest', 'sphinx.ext.todo']
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
@@ -132,6 +132,12 @@ latex_elements = {
 
 # Documents to append as an appendix to all manuals.
 #latex_appendices = []
+
+
+# Extension options
+# -----------------
+
+todo_include_todos = True
 
 
 # Extension interface
